# dssi-render

./: AUTHORS  HOWTO  INSTALLATION_NOTES  Makefile  Makefile.am  Makefile.in  TODO  aclocal.m4  config.status  configure  configure.ac  configure.in  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3
src/: .cli-dssi-host.c.swp  .cli-dssi-host.h.swp  .gitignore  .ladspa_run_synth.c.swp  .ladspa_run_synth.h.swp  DSSI-render  DSSI-render.c  DSSI_NOTES  Makefile  Makefile.am  Makefile.in  cli-dssi-host  cli-dssi-host.c  cli-dssi-host.h  dssi-render  dssi-render.c  dssi-render.h  example.mid  ladspa_run_synth.c  ladspa_run_synth.h  memb.c  readmidi.c  readmidi.h  valgrind_output
src/.deps/: DSSI-render.Po  cli-dssi-host.Po  dssi-render.Po  ladspa_run_synth.Po
src/midi/: .fluid_midi.c.swp  Makefile  Makefile.am  Makefile.in  NOTES  custom.c  custom.h  example1.mid  fluid_list.c  fluid_list.lo  fluid_midi.c  fluid_midi.h  fluid_midi.lo  fluid_midi_custom.h  fluidsynth_priv.h  libfluidmidi.la  midi_loader.c  midi_loader.h  midi_loader.lo  test_midi_loader  test_midi_loader.c
src/midi/.deps/: custom.Plo  fluid_list.Plo  fluid_midi.Plo  midi_loader.Plo  test_midi_loader.Po
src/midi/.libs/: libfluidmidi.la
src/midi/old/: fluid_hash.c  fluid_sys.c  fluid_sys.h
